# rialto-notebooks

./: .env.sample  .gitignore  README.md  comet.ipynb  dimensions-data.ipynb  example.ipynb  publication-duplication.ipynb  pyproject.toml
data/comet/: apc.json  author.json  funders.json  openaccess.json
